tests/fixtures/sample-js-project-positive/shared/utils/src/errors/catch-aef98139.ts
export async function fn_aef98139(): Promise<void> {
  try {
    throw new Error("oops");
  } catch (e) {
    console.error(e);
  }
}
